--- a/dropper.tex
+++ b/dropper.tex
@@ -669,7 +669,7 @@ utilizzando per scrivere in memoria. Viene restituita la
 concatenazione delle catene create per ogni iterazione, che
 verosimilimente scriverà in memoria, partendo dall'indirizzo indicato
 i valori in ingresso. L'implementazione attuale di questa funzione è
-riportata nel listato \rif{cod:memstr.get_chunk}
+riportata nel listato \ref{cod:memstr.get_chunk}
 
 \subsubsection{Selezione dei gadget per la operazioni aritmetiche in
   memoria}
