--- a/dropper.tex
+++ b/dropper.tex
@@ -697,7 +697,7 @@ addizione che considerano il valore di riporto (ad esempio adc su
 intel). Questi gadget possono rilevarsi molto utili. Spesso infatti
 sono disponibili solo gadget aritmetici che ci consentono di
 aggiungere un byte per volta. Effettuare un'operazione di got patching
-(vedi sez. \rif{sec:got_patching} un byte per volta senza considerare
+(vedi sez. \ref{sec:got_patching} un byte per volta senza considerare
 i valori di ritorno tra un byte e il successivo può portare ad un
 risultato errato dell'operazione che si sta effettuando. Per poter
 permettere la cataloghizzazoine di questo tipo di gadget, si è dovuto
